--- a/.github/workflows/os-osd-deployment-scheduled.yml
+++ b/.github/workflows/os-osd-deployment-scheduled.yml
@@ -29,6 +29,8 @@ jobs:
       ga-tracking-id: ${{ secrets.GA_TRACKING_ID }}
       osd_user: ${{ secrets.OSD_USER }}
       osd_user_password: ${{ secrets.OSD_USER_PASSWORD }}
+      otel_root_ca: ${{ secrets.OTEL_ROOT_CA }}
+      otel_data_prepper_cert: ${{ secrets.OTEL_DATA_PREPPER_CERT }}
 
   OSD-Functional-Test-Preview:
     needs: OS-OSD-Preview-Scheduled-Deployment
