--- a/config/playground/metrics/tracing/preview/otel-config.yaml
+++ b/config/playground/metrics/tracing/preview/otel-config.yaml
@@ -47,8 +47,8 @@ data:
             hosts: [ "https://opensearch-cluster-leader:9200" ]
             # cert: "/usr/share/data-prepper-config/root-ca.pem"
             insecure: true
-            username: ${OSD_USER}
-            password: ${OSD_USER_PASSWORD}
+            username: "${OSD_USER}"
+            password: "${OSD_USER_PASSWORD}"
             index_type: trace-analytics-raw
     service-map-pipeline:
       delay: "100"
@@ -62,9 +62,15 @@ data:
             hosts: ["https://opensearch-cluster-leader:9200"]
             # cert: "//usr/share/data-prepper-config/root-ca.pem"
             insecure: true
-            username: ${OSD_USER}
-            password: ${OSD_USER_PASSWORD}
+            username: "${OSD_USER}"
+            password: "${OSD_USER_PASSWORD}"
             index_type: trace-analytics-service-map
 
   data-prepper-config: |
     ssl: false
+
+  root-ca: |
+   ${OTEL_ROOT_CA}
+
+  data-prepper-cert: |
+   ${OTEL_DATA_PREPPER_CERT}
