--- a/.github/workflows/os-osd-deployment-scheduled.yml
+++ b/.github/workflows/os-osd-deployment-scheduled.yml
@@ -27,6 +27,10 @@ jobs:
       openid_base_redirect_url: ${{ secrets.OPENID_LOGOUT_URL }}
       openid_logout_url: ${{ secrets.OPENID_BASE_REDIRECT_URL }}
       ga-tracking-id: ${{ secrets.GA_TRACKING_ID }}
+      osd_user: ${{ secrets.OSD_USER }}
+      osd_user_password: ${{ secrets.OSD_USER_PASSWORD }}
+      otel_root_ca: ${{ secrets.OTEL_ROOT_CA }}
+      otel_data_prepper_cert: ${{ secrets.OTEL_DATA_PREPPER_CERT }}
 
   OSD-Functional-Test-Preview:
     needs: OS-OSD-Preview-Scheduled-Deployment
