[OpenSearch Playground] Add logstash and tracing to the deployment pipeline (#99)
* configure workshop application

Signed-off-by: Tao Liu <liutaoaz@amazon.com>

* update readme

Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/.github/workflows/deployment-template.yml
+++ b/.github/workflows/deployment-template.yml
@@ -28,6 +28,14 @@ on:
         required: false
       ga-tracking-id:
         required: false
+      osd_user: 
+        required: false
+      osd_user_password:
+        required: false
+      otel_root_ca:
+        required: false
+      otel_data_prepper_cert:
+        required: false
 
 jobs:
 
@@ -37,8 +45,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Step 1 - Replace Tokens
-        if: ${{inputs.deploy-env}} == 'preview'
+      - name: Step 1 - Replace Tokens for helm chart configuration
+        if: ${{ inputs.deploy-env == 'preview' }}
         uses: cschleiden/replace-tokens@v1
         with:
           files: '["${{ github.workspace }}/config/playground/helm/${{inputs.deploy-env}}/helm-opensearch-dashboards.yaml"]'
@@ -51,18 +59,64 @@ jobs:
           OPENID_LOGOUT_URL: ${{ secrets.openid_logout_url }}
           GA_TRACKING_ID: ${{ secrets.ga-tracking-id }}
 
-      - name: Step 2 - Configure AWS Credentials
+      - name: Step 2 - Replace Tokens for logstash configuration
+        if: ${{ inputs.deploy-env == 'preview' }}
+        uses: cschleiden/replace-tokens@v1
+        with:
+          files: '["${{ github.workspace }}/config/playground/metrics/logstash/${{inputs.deploy-env}}/logstash.yaml"]'
+          tokenPrefix: '${'
+          tokenSuffix: '}'
+        env:
+          OSD_USER: ${{ secrets.osd_user }}
+          OSD_USER_PASSWORD: ${{ secrets.osd_user_password }}
+
+      - name: Step 3 - Replace Tokens for tracing configuration
+        if: ${{ inputs.deploy-env == 'preview' }}
+        uses: cschleiden/replace-tokens@v1
+        with:
+          files: '["${{ github.workspace }}/config/playground/metrics/tracing/${{inputs.deploy-env}}/otel-config.yaml"]'
+          tokenPrefix: '${'
+          tokenSuffix: '}'
+        env:
+          OSD_USER: ${{ secrets.osd_user }}
+          OSD_USER_PASSWORD: ${{ secrets.osd_user_password }}
+          OTEL_ROOT_CA: ${{ secrets.otel_root_ca }}
+          OTEL_DATA_PREPPER_CERT: ${{ secrets.otel_data_prepper_cert }}
+
+      - name: Step 4 - Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.access-key-id }}
           aws-secret-access-key: ${{ secrets.secret-access-key }}
           aws-region: ${{ secrets.region }}
 
-      - name: Step 3 - Deploy OpenSearch and OpenSearch Dashboards By Helm Chart
+      - name: Step 5 - Delete Logstash
+        if: ${{ inputs.deploy-env == 'preview' }}
         uses: elastic-analytics/dashboards-action@main
         env:
           KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
-          TRACKING_ID: ${{ secrets.ga-tracking-id }}
+        with:
+          plugins: ""
+          command: |
+            kubectl delete ns logstash
+
+      - name: Step 6 - Delete Tracing
+        if: ${{ inputs.deploy-env == 'preview' }}
+        uses: elastic-analytics/dashboards-action@main
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
+        with:
+          plugins: ""
+          command: |
+            kubectl delete -f config/playground/metrics/tracing/${{inputs.deploy-env}}/jaeger-agent.yaml
+            kubectl delete -f config/playground/metrics/tracing/${{inputs.deploy-env}}/otel-config.yaml
+            kubectl delete -f config/playground/metrics/tracing/${{inputs.deploy-env}}/otel-collector.yaml
+            kubectl delete -f config/playground/metrics/tracing/${{inputs.deploy-env}}/data-prepper.yaml
+
+      - name: Step 7 - Deploy OpenSearch and OpenSearch Dashboards By Helm Chart
+        uses: elastic-analytics/dashboards-action@main
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
         with:
           plugins: "" # optional, list of Helm plugins. eg. helm-secrets or helm-diff.
           # Teardown the current OS and OSD and then install the lastest version
@@ -78,3 +132,28 @@ jobs:
             kubectl get pvc | grep opensearch-cluster-leader-opensearch-cluster-leader- | awk '{print $1}'| xargs kubectl delete pvc
             helm install opensearch opensearch/opensearch -f config/playground/helm/${{inputs.deploy-env}}/helm-opensearch.yaml
             helm install dashboards opensearch/opensearch-dashboards -f config/playground/helm/${{inputs.deploy-env}}/helm-opensearch-dashboards.yaml
+
+      - name: Step 8 - Install Logstash
+        if: ${{ inputs.deploy-env == 'preview' }}
+        uses: elastic-analytics/dashboards-action@main
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
+        with:
+          plugins: ""
+          command: |
+            kubectl create ns logstash
+            kubectl create -f config/playground/metrics/logstash/${{inputs.deploy-env}}/logstash-configmap.yaml
+            kubectl apply -f config/playground/metrics/logstash/${{inputs.deploy-env}}/logstash.yaml
+
+      - name: Step 9 - Install Tracing
+        if: ${{ inputs.deploy-env == 'preview' }}
+        uses: elastic-analytics/dashboards-action@main
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
+        with:
+          plugins: ""
+          command: |
+            kubectl apply -f config/playground/metrics/tracing/${{inputs.deploy-env}}/jaeger-agent.yaml
+            kubectl create -f config/playground/metrics/tracing/${{inputs.deploy-env}}/otel-config.yaml
+            kubectl apply -f config/playground/metrics/tracing/${{inputs.deploy-env}}/otel-collector.yaml
+            kubectl apply -f config/playground/metrics/tracing/${{inputs.deploy-env}}/data-prepper.yaml
