--- a/config/playground/helm/preview/helm-opensearch.yaml
+++ b/config/playground/helm/preview/helm-opensearch.yaml
@@ -736,11 +736,12 @@ securityConfig:
                 - "indices:data/read/mget"
                 - "indices:data/read/msearch"
                 - "indices:data/read/mtv"
+                - "indices:data/read/scroll"
+                - "indices:data/write/index"
                 - "indices:admin/get"
                 - "indices:admin/aliases/exists*"
                 - "indices:admin/aliases/get*"
                 - "indices:admin/mappings/get"
-                - "indices:data/read/scroll"
                 - "indices:monitor/settings/get"
                 - "indices:monitor/stats"
           tenant_permissions:
