use 2.3.0 as base
Signed-off-by: Lu Yu <nluyu@amazon.com>

--- a/config/playground/docker/dev/Dockerfile
+++ b/config/playground/docker/dev/Dockerfile
@@ -1,4 +1,4 @@
-FROM opensearchproject/opensearch-dashboards:latest
+FROM opensearchproject/opensearch-dashboards:2.3.0
 
 COPY . /opt/opensearch-dashboards/
 
