--- a/config/playground/helm/prod/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/prod/helm-opensearch-dashboards.yaml
@@ -76,8 +76,8 @@ config:
     server.host: '0.0.0.0'
     # Use the consolidated menu and global header bar
     opensearchDashboards.branding.useExpandedHeader: false
-    # Enable wizard feature
-    wizard.enabled: true
+    # Enable multiple datasource
+    data_source.enabled: true
 
 priorityClassName: ""
 
