--- a/config/playground/helm/prod/helm-opensearch.yaml
+++ b/config/playground/helm/prod/helm-opensearch.yaml
@@ -157,11 +157,10 @@ persistence:
   #   set, choosing the default provisioner.  (gp2 on AWS, standard on
   #   GKE, AWS & OpenStack)
 
-storageClass: "-"
-storageClassName: netapp-ssd
-accessModes:
-  - ReadWriteOnce
-size: 30Gi
+  accessModes:
+    - ReadWriteOnce
+  size: 50Gi
+  annotations: {}
 
 protocol: http
 httpPort: 9200
