update scroll permission
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/config/playground/helm/preview/helm-opensearch.yaml
+++ b/config/playground/helm/preview/helm-opensearch.yaml
@@ -800,7 +800,7 @@ securityConfig:
                 - "indices:data/read/mget"
                 - "indices:data/read/msearch"
                 - "indices:data/read/mtv"
-                - "indices:data/read/scroll"
+                - "indices:data/read/scroll*"
                 - "indices:data/write*"
                 - "indices:admin/create"
                 - 'indices:admin/analyze'
