Adds observability change
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/config/playground/helm/preview/helm-opensearch.yaml
+++ b/config/playground/helm/preview/helm-opensearch.yaml
@@ -96,10 +96,10 @@ secretMounts: []
 hostAliases: []
 
 image:
-  repository: "opensearchproject/opensearch"
-# override image tag, which is .Chart.AppVersion by default
-imageTag: ""
-imagePullPolicy: "IfNotPresent"
+  repository: "opensearchplayground/opensearch"
+  # override image tag, which is .Chart.AppVersion by default
+  tag: "latest"
+  pullPolicy: "Always"
 
 podAnnotations: {}
 
