add access to cluster for security analytics
Signed-off-by: Lu Yu <nluyu@amazon.com>

--- a/config/playground/helm/dev/helm-opensearch.yaml
+++ b/config/playground/helm/dev/helm-opensearch.yaml
@@ -692,6 +692,9 @@ securityConfig:
             - cluster:admin/opendistro/rollup/get
             - cluster:admin/opendistro/transform/explain
             - cluster:admin/opendistro/transform/get
+            # To enable read access to security analytics
+            - cluster:admin/opensearch/securityanalytics/rule/search
+            - cluster:admin/opensearch/securityanalytics/detector/search
           index_permissions:
             - index_patterns:
               - ".kibana"
