add more permissions
Signed-off-by: Lu Yu <nluyu@amazon.com>

--- a/config/playground/helm/dev/helm-opensearch.yaml
+++ b/config/playground/helm/dev/helm-opensearch.yaml
@@ -697,6 +697,7 @@ securityConfig:
             - cluster:admin/opensearch/securityanalytics/detector/search
             - cluster:admin/opensearch/securityanalytics/findings/get
             - cluster:admin/opensearch/securityanalytics/alerts/get
+            - cluster:admin/opensearch/securityanalytics/detector/get
           index_permissions:
             - index_patterns:
               - ".kibana"
