give read permission for google user for security analytics and also add sql scroll permission for anonymous user
Signed-off-by: Lu Yu <nluyu@amazon.com>

--- a/config/playground/helm/prod/helm-opensearch.yaml
+++ b/config/playground/helm/prod/helm-opensearch.yaml
@@ -699,6 +699,8 @@ securityConfig:
             - cluster:admin/opensearch/securityanalytics/findings/get
             - cluster:admin/opensearch/securityanalytics/alerts/get
             - cluster:admin/opensearch/securityanalytics/detector/get
+            # For using sql join query
+            - "indices:data/read/scroll*"
           index_permissions:
             - index_patterns:
               - ".kibana"
