Grant permission for anonymous user for Security Analytics plugin (#107)
* add access to cluster for security analytics

Signed-off-by: Lu Yu <nluyu@amazon.com>

* remove unexpected prop

Signed-off-by: Lu Yu <nluyu@amazon.com>

* remove cluster permission

Signed-off-by: Lu Yu <nluyu@amazon.com>

* add more permission

Signed-off-by: Lu Yu <nluyu@amazon.com>

* add more permissions

Signed-off-by: Lu Yu <nluyu@amazon.com>

* add same permission for preview and prod

Signed-off-by: Lu Yu <nluyu@amazon.com>

* give read permission for google user for security analytics and also add sql scroll permission for anonymous user

Signed-off-by: Lu Yu <nluyu@amazon.com>

Signed-off-by: Lu Yu <nluyu@amazon.com>

--- a/config/playground/helm/preview/helm-opensearch.yaml
+++ b/config/playground/helm/preview/helm-opensearch.yaml
@@ -706,6 +706,14 @@ securityConfig:
             - cluster:admin/opendistro/rollup/get
             - cluster:admin/opendistro/transform/explain
             - cluster:admin/opendistro/transform/get
+            # To enable read access to security analytics
+            - cluster:admin/opensearch/securityanalytics/rule/search
+            - cluster:admin/opensearch/securityanalytics/detector/search
+            - cluster:admin/opensearch/securityanalytics/findings/get
+            - cluster:admin/opensearch/securityanalytics/alerts/get
+            - cluster:admin/opensearch/securityanalytics/detector/get
+            # For using sql join query
+            - "indices:data/read/scroll*"
           index_permissions:
             - index_patterns:
               - ".kibana"
@@ -770,6 +778,12 @@ securityConfig:
             - cluster:admin/opendistro/rollup/get
             - cluster:admin/opendistro/transform/explain
             - cluster:admin/opendistro/transform/get
+            # To enable read access to security analytics
+            - cluster:admin/opensearch/securityanalytics/rule/search
+            - cluster:admin/opensearch/securityanalytics/detector/search
+            - cluster:admin/opensearch/securityanalytics/findings/get
+            - cluster:admin/opensearch/securityanalytics/alerts/get
+            - cluster:admin/opensearch/securityanalytics/detector/get
             # For using sql join query
             - "indices:data/read/scroll*"
           index_permissions:
