--- a/.github/workflows/functional-test-template.yml
+++ b/.github/workflows/functional-test-template.yml
@@ -46,6 +46,10 @@ jobs:
           run: |
             curl -XPOST ${{inputs.endpoint}}/api/saved_objects/_import -H 'osd-xsrf: true' --form file=@cypress/dashboards/metricbeat-eks-overview.ndjson -k -u ${{secrets.osd-user}}:${{secrets.osd-user-password}}
 
+        - name: Step 5 - Add introduction dashboard
+          run: |
+            curl -XPOST ${{inputs.endpoint}}/api/saved_objects/_import -H 'osd-xsrf: true' --form file=@cypress/dashboards/introduction-dashboard.ndjson -k -u ${{secrets.osd-user}}:${{secrets.osd-user-password}}
+
   Plugins:
     runs-on: ubuntu-latest
     needs: OSD-Functional-Test-OSD
