--- a/config/playground/docker/dev/Dockerfile
+++ b/config/playground/docker/dev/Dockerfile
@@ -1,4 +1,4 @@
-FROM opensearchproject/opensearch-dashboards:latest
+FROM opensearchplayground/opensearch-dashboards:2.4.0-11212022
 
 COPY . /opt/opensearch-dashboards/
 
