--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -66,7 +66,7 @@ config:
     opensearch.hosts: [https://localhost:9200]
     opensearch.ssl.verificationMode: none
     opensearch.username: kibanaserver
-    opensearch.password: kibanaserver
+    opensearch.password: ${KIBANASERVER}
     opensearch.requestHeadersWhitelist: [authorization, securitytenant]
     opensearch_security.auth.anonymous_auth_enabled: true
     opensearch_security.multitenancy.enabled: false
