--- a/.github/workflows/deployment-template.yml
+++ b/.github/workflows/deployment-template.yml
@@ -47,7 +47,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Step 1 - Replace Tokens for helm chart configuration
-        if: ${{ inputs.deploy-env == 'preview' }}
+        if: ${{ (inputs.deploy-env == 'preview') || (inputs.deploy-env == 'searchapps') }}
         uses: cschleiden/replace-tokens@v1
         with:
           files: '["${{ github.workspace }}/config/playground/helm/${{inputs.deploy-env}}/helm-opensearch-dashboards.yaml"]'
@@ -71,7 +71,7 @@ jobs:
           KIBANASERVER: ${{ secrets.kibanaserver }}
 
       - name: Step 3 - Replace Tokens for logstash configuration
-        if: ${{ inputs.deploy-env == 'preview' }}
+        if: ${{ (inputs.deploy-env == 'preview') || (inputs.deploy-env == 'searchapps') }}
         uses: cschleiden/replace-tokens@v1
         with:
           files: '["${{ github.workspace }}/config/playground/metrics/logstash/${{inputs.deploy-env}}/logstash.yaml"]'
@@ -82,7 +82,7 @@ jobs:
           OSD_USER_PASSWORD: ${{ secrets.osd_user_password }}
 
       - name: Step 4 - Replace Tokens for tracing configuration
-        if: ${{ inputs.deploy-env == 'preview' }}
+        if: ${{ (inputs.deploy-env == 'preview') || (inputs.deploy-env == 'searchapps') }}
         uses: cschleiden/replace-tokens@v1
         with:
           files: '["${{ github.workspace }}/config/playground/metrics/tracing/${{inputs.deploy-env}}/otel-config.yaml"]'
@@ -102,7 +102,7 @@ jobs:
           aws-region: ${{ secrets.region }}
 
       - name: Step 6 - Delete Logstash
-        if: ${{ inputs.deploy-env == 'preview' }}
+        if: ${{ (inputs.deploy-env == 'preview') || (inputs.deploy-env == 'searchapps') }}
         uses: elastic-analytics/dashboards-action@main
         env:
           KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
@@ -112,7 +112,7 @@ jobs:
             kubectl delete ns logstash
 
       - name: Step 7 - Delete Tracing
-        if: ${{ inputs.deploy-env == 'preview' }}
+        if: ${{ (inputs.deploy-env == 'preview') || (inputs.deploy-env == 'searchapps') }}
         uses: elastic-analytics/dashboards-action@main
         env:
           KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
@@ -145,7 +145,7 @@ jobs:
             helm install dashboards opensearch/opensearch-dashboards -f config/playground/helm/${{inputs.deploy-env}}/helm-opensearch-dashboards.yaml
 
       - name: Step 9 - Install Logstash
-        if: ${{ inputs.deploy-env == 'preview' }}
+        if: ${{ (inputs.deploy-env == 'preview') || (inputs.deploy-env == 'searchapps') }}
         uses: elastic-analytics/dashboards-action@main
         env:
           KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
@@ -157,7 +157,7 @@ jobs:
             kubectl apply -f config/playground/metrics/logstash/${{inputs.deploy-env}}/logstash.yaml
 
       - name: Step 10 - Install Tracing
-        if: ${{ inputs.deploy-env == 'preview' }}
+        if: ${{ (inputs.deploy-env == 'preview') || (inputs.deploy-env == 'searchapps') }}
         uses: elastic-analytics/dashboards-action@main
         env:
           KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
