--- a/.github/workflows/os-osd-deployment-scheduled.yml
+++ b/.github/workflows/os-osd-deployment-scheduled.yml
@@ -3,6 +3,8 @@
 name: Scheduled Deploy OpenSearch and OpenSearch Dashboards
 
 on:
+  push:
+    branches: [ searchapps ]
   # Adds workflow_dispatch for manually running a workflow
   workflow_dispatch:
   # Adds schdeule event trigger for daily reset.
@@ -12,20 +14,20 @@ on:
     - cron:  '30 04 * * *'
 jobs:
 
-  OS-OSD-Preview-Scheduled-Deployment:
-    uses: opensearch-project/dashboards-anywhere/.github/workflows/deployment-template.yml@main
+  OS-OSD-SearchApps-Scheduled-Deployment:
+    uses: opensearch-project/dashboards-anywhere/.github/workflows/deployment-template.yml@searchapps
     with:
       helm-repo: https://opensearch-project.github.io/helm-charts/
-      deploy-env: preview
+      deploy-env: searchapps
     secrets:
-      access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PREVIEW }}
-      secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PREVIEW }}
-      region: ${{ secrets.AWS_REGION_PREVIEW }}
-      kube-config: ${{ secrets.KUBE_CONFIG_DATA_PREVIEW }}
-      openid_client_id: ${{ secrets.OPENID_CLIENT_ID }}
-      openid_client_secret: ${{ secrets.OPENID_CLIENT_SECRET }}
-      openid_base_redirect_url: ${{ secrets.OPENID_LOGOUT_URL }}
-      openid_logout_url: ${{ secrets.OPENID_BASE_REDIRECT_URL }}
+      access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_SEARCHAPPS }}
+      secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_SEARCHAPPS }}
+      region: ${{ secrets.AWS_REGION_SEARCHAPPS }}
+      kube-config: ${{ secrets.KUBE_CONFIG_DATA_SEARCHAPPS }}
+      openid_client_id: ${{ secrets.OPENID_CLIENT_ID_SEARCHAPPS }}
+      openid_client_secret: ${{ secrets.OPENID_CLIENT_SECRET_SEARCHAPPS }}
+      openid_base_redirect_url: ${{ secrets.OPENID_LOGOUT_URL_SEARCHAPPS }}
+      openid_logout_url: ${{ secrets.OPENID_BASE_REDIRECT_URL_SEARCHAPPS }}
       ga-tracking-id: ${{ secrets.GA_TRACKING_ID }}
       osd_user: ${{ secrets.OSD_USER }}
       osd_user_password: ${{ secrets.OSD_USER_PASSWORD }}
@@ -33,11 +35,11 @@ jobs:
       otel_data_prepper_cert: ${{ secrets.OTEL_DATA_PREPPER_CERT }}
       kibanaserver: ${{ secrets.KIBANASERVER }}
 
-  OSD-Functional-Test-Preview:
-    needs: OS-OSD-Preview-Scheduled-Deployment
+  OSD-Functional-Test-SearchApps:
+    needs: OS-OSD-SearchApps-Scheduled-Deployment
     uses: opensearch-project/dashboards-anywhere/.github/workflows/functional-test-template.yml@previewchangefeature
     with:
-      endpoint: https://reinvent.playground.opensearch.org
+      endpoint: https://searchapps.playground.opensearch.org
     secrets:
       osd-user: ${{ secrets.OSD_USER }}
       osd-user-password: ${{ secrets.OSD_USER_PASSWORD }}
